# toffi_real_epuck

./: download.sh  installation.sh
AutoMoDe-toffi_real_epuck/: CMakeLists.txt  LICENSE  README.asciidoc
AutoMoDe-toffi_real_epuck/src/: AutoMoDeMain.cpp  AutoMoDeVisualizeFSM.cpp  CMakeLists.txt  RealLibrary.cmake  SimLibrary.cmake
AutoMoDe-toffi_real_epuck/src/core/: AutoMoDeController.cpp  AutoMoDeController.h  AutoMoDeFiniteStateMachine.cpp  AutoMoDeFiniteStateMachine.h  AutoMoDeFsmBuilder.cpp  AutoMoDeFsmBuilder.h  AutoMoDeFsmHistory.cpp  AutoMoDeFsmHistory.h
AutoMoDe-toffi_real_epuck/src/modules/: AutoMoDeBehaviour.cpp  AutoMoDeBehaviour.h  AutoMoDeBehaviourAntiPhototaxis.cpp  AutoMoDeBehaviourAntiPhototaxis.h  AutoMoDeBehaviourAttraction.cpp  AutoMoDeBehaviourAttraction.h  AutoMoDeBehaviourExploration.cpp  AutoMoDeBehaviourExploration.h  AutoMoDeBehaviourGoAwayColor.cpp  AutoMoDeBehaviourGoAwayColor.h  AutoMoDeBehaviourGoToColor.cpp  AutoMoDeBehaviourGoToColor.h  AutoMoDeBehaviourPhototaxis.cpp  AutoMoDeBehaviourPhototaxis.h  AutoMoDeBehaviourPushColor.cpp  AutoMoDeBehaviourPushColor.h  AutoMoDeBehaviourRepulsion.cpp  AutoMoDeBehaviourRepulsion.h  AutoMoDeBehaviourStop.cpp  AutoMoDeBehaviourStop.h  AutoMoDeCondition.cpp  AutoMoDeCondition.h  AutoMoDeConditionBlackFloor.cpp  AutoMoDeConditionBlackFloor.h  AutoMoDeConditionFixedProbability.cpp  AutoMoDeConditionFixedProbability.h  AutoMoDeConditionGrayFloor.cpp  AutoMoDeConditionGrayFloor.h  AutoMoDeConditionInvertedNeighborsCount.cpp  AutoMoDeConditionInvertedNeighborsCount.h  AutoMoDeConditionNeighborsCount.cpp  AutoMoDeConditionNeighborsCount.h  AutoMoDeConditionProbColor.cpp  AutoMoDeConditionProbColor.h  AutoMoDeConditionWhiteFloor.cpp  AutoMoDeConditionWhiteFloor.h
argos3-arena/src/: CMakeLists.txt
argos3-arena/src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake  (+1 more)
argos3-arena/src/plugins/robots/arena/: CMakeLists.txt
argos3-arena/src/plugins/robots/arena/simulator/: arena_entity.cpp  arena_entity.h  block_entity.cpp  block_entity.h  dynamics2d_block_model.cpp  dynamics2d_block_model.h  qtopengl_block.cpp  qtopengl_block.h  wall_entity.cpp  wall_entity.h
experiments-loop-functions/loop-functions/: CMakeLists.txt
experiments-loop-functions/loop-functions/mocha/: CMakeLists.txt  ToffiChLoopFunc.cpp  ToffiChLoopFunc.h  ToffiPsLoopFunc.cpp  ToffiPsLoopFunc.h  ToffiPuLoopFunc.cpp  ToffiPuLoopFunc.h
experiments-loop-functions/src/: CoreLoopFunctions.cpp  CoreLoopFunctions.h
(+7 files in other folders)
